JS warning z-index fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@ body {
     position: fixed;
     text-align: center;
     width: 100%;
+    z-index: 100;
 }
 
 .nav-desktop {
